# legosnark

./: .gitmodules  CMakeLists.txt  README.md
depends/: CMakeLists.txt
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  cplink.cc  hadamard.cc  legogrothmatrix.cc  matrixAC.cc  matrixsc.cc
src/gadgets/: arithcirc.cc  arithcirc.h  hadamardsc.cc  hadamardsc.h  lipmaa.cc  lipmaa.h  matrixsc.cc  matrixsc.h  poly.h  sigma.cc  sigma.h  snark.cc  snark.h  subspace.cc  subspace.h  sumcheck.cc  sumcheck.h
src/prototools/: commit.cc  commit.h  interp.cc  interp.h  mle.cc  mle.h  polytools.cc  polytools.h
src/utils/: benchmark.cc  benchmark.h  bp_circuits.cc  bp_circuits.h  dbgutil.cc  dbgutil.h  globl.h  matrix.cc  matrix.h  sparsemexp.cc  sparsemexp.h  util.cc  util.h
